# amigos

./: Readme.md
app/: Cargo.toml  build.rs
app/resources/: resource.xml  style.css  window.ui
app/src/: front.rs  main.rs
app/src/front/: backend.rs
app/src/front/window/: imp.rs  mod.rs
app/src/front/window/imp/: backend.rs  services.rs
bk/: Program.cs  appsettings.json  bk.csproj
bk/Controllers/: FriendController.cs
bk/Models/: Friend.cs
bk/Properties/: launchSettings.json
db/: 11  ddl.sql  mysql.container
doc/: Tasks.md  amigos.drawio  apresentacao.odt
mobile/: pubspec.yaml
mobile/lib/: main.dart
mobile/lib/core/services/: api.dart
mobile/lib/features/models/: friend.dart  person.dart
mobile/lib/features/widgets/: event_card.dart  events.dart  focus_dialog.dart  home.dart  navbar.dart  person_card.dart  screen_main.dart  search.dart  social.dart
