[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.11.3", package = "gtk4", features = ["v4_22"] }
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
glib-build-tools = "0.22.0"

